--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
+    "firebase": "^9.8.0",
+    "nodemailer": "^6.7.5",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
